apps/base/blog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    app.kubernetes.io/name: blog
    app.kubernetes.io/part-of: documentation
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
